fixed text align

--- a/css/main.css
+++ b/css/main.css
@@ -93,8 +93,6 @@ header {
     -webkit-filter: grayscale(100%);
     filter: grayscale(100%);
     -webkit-transition: .3s ease-in-out;
-    transition: .3s ease-in-out;
-
 }
 
 .members-photos:hover > img {
@@ -425,6 +423,7 @@ h3 {
     max-width: 1200px;
     min-width: 300px;
     margin: 0 auto;
+    float: none;
 
 }
 
